--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*::before , *::after , *{
+  box-sizing: border-box;
+}
+
+.container{
+  max-width: 1180px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+a{
+  text-decoration: none;
+}
+
+.dark * {
+
+  background-color: black !important ;
+  color: white !important;
+
 }
